--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx:latest
+        image: quyetjs/lab_argocd
         ports:
         - containerPort: 8080
