--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nanajanashia/argocd-app:1.0
+        image: quyetjs/lab_argocd:tag
         ports:
         - containerPort: 8080
 
