--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -1,21 +1,36 @@
-apiVersion: apps/v1
+apiVersion : apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deploy
+  name: myapp-argocd
 spec:
   selector:
     matchLabels:
-      app: myapp
-  replicas: 2
+      app: myapp-argocd
+  replicas: 3
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp-argocd
     spec:
       containers:
-      - name: myapp
+      - name: myapp-argocd
         image: quyetjs/lab_argocd:tag
         ports:
         - containerPort: 8080
-
-
+        env:
+          - name: ENV
+            value: dev
+          - name: APP_VERSION
+            value: tag
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 30
+        readinessProbe: # Thêm readiness probe để kiểm tra container có sẵn sàng phục vụ không
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
